fixed paginator alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,10 @@
 .p-paginator {
     justify-content: right !important;
     margin-top: 10px;
-    border: none !important;
+    padding-right: 0;
+    border: none;
+}
+
+.p-paginator .p-paginator-rpp-options {
+    margin-right: 0;
 }
